fix: validate controller render machine ids